--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -157,10 +157,6 @@ jobs:
           - os: ubuntu-latest
             python-version: "3.13"
             experimental: true
-          # Windows ConPTY experimental (non-blocking)
-          - os: windows-latest
-            python-version: "3.12"
-            experimental: true
 
     steps:
       - uses: actions/checkout@v6
@@ -177,6 +173,7 @@ jobs:
           pip install -e ".[dev]"
 
       - name: Run tests with coverage
+        timeout-minutes: 10
         run: |
           pytest --cov=atlasbridge --cov-report=xml --cov-report=term-missing -v
 
