fix(ci): exclude bundled dashboard dist from secret scan
The minified index.cjs triggers a false positive for Secret Keyword.

--- a/.github/workflows/security-audit.yml
+++ b/.github/workflows/security-audit.yml
@@ -38,6 +38,7 @@ jobs:
             --exclude-files '\.env\.example' \
             --exclude-files 'docs/.*' \
             --exclude-files 'dashboard/shared/schema\.ts' \
+            --exclude-files 'src/atlasbridge/_dashboard_dist/.*' \
             --exclude-secrets 'sk-test|xoxb-test|ghp_test|password_input' \
             > .secrets-scan-results.json
           python -c "
