--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,14 +88,14 @@ jobs:
       - name: atlasbridge autopilot --help
         run: atlasbridge autopilot --help
 
-      - name: atlasbridge edition --help
-        run: atlasbridge edition --help
-
-      - name: atlasbridge features --help
-        run: atlasbridge features --help
-
       - name: atlasbridge cloud --help
         run: atlasbridge cloud --help
+
+      - name: atlasbridge cloud edition --help
+        run: atlasbridge cloud edition --help
+
+      - name: atlasbridge cloud features --help
+        run: atlasbridge cloud features --help
 
       - name: atlasbridge lab --help
         run: atlasbridge lab --help
@@ -103,14 +103,17 @@ jobs:
       - name: atlasbridge db --help
         run: atlasbridge db --help
 
-      - name: atlasbridge adapters --help
-        run: atlasbridge adapters --help
+      - name: atlasbridge audit --help
+        run: atlasbridge audit --help
 
-      - name: atlasbridge pause --help
-        run: atlasbridge pause --help
+      - name: atlasbridge replay --help
+        run: atlasbridge replay --help
 
-      - name: atlasbridge resume --help
-        run: atlasbridge resume --help
+      - name: atlasbridge risk --help
+        run: atlasbridge risk --help
+
+      - name: atlasbridge dashboard --help
+        run: atlasbridge dashboard --help
 
       - name: atlasbridge console --help
         run: atlasbridge console --help
