feat: audit export command with jsonl/json/csv output
atlasbridge audit export writes audit events to stdout for SIEM ingestion.
Supports --format jsonl|json|csv, --session, --since, --until filters.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,6 +106,9 @@ jobs:
       - name: atlasbridge audit --help
         run: atlasbridge audit --help
 
+      - name: atlasbridge audit export --help
+        run: atlasbridge audit export --help
+
       - name: atlasbridge replay --help
         run: atlasbridge replay --help
 
