--- a/.github/workflows/security-audit.yml
+++ b/.github/workflows/security-audit.yml
@@ -39,6 +39,7 @@ jobs:
             --exclude-files 'docs/.*' \
             --exclude-files 'dashboard/shared/schema\.ts' \
             --exclude-files 'src/atlasbridge/_dashboard_dist/.*' \
+            --exclude-files 'dashboard/client/src/pages/workspaces\.tsx' \
             --exclude-secrets 'sk-test|xoxb-test|ghp_test|password_input' \
             > .secrets-scan-results.json
           python -c "
