--- a/pyproject.toml
+++ b/pyproject.toml
@@ -183,8 +183,14 @@ disallow_any_generics = false
 no_implicit_optional = true
 
 [[tool.mypy.overrides]]
-module = ["ptyprocess.*", "detect_secrets.*", "textual.*", "slack_sdk.*", "fastapi.*", "uvicorn.*", "starlette.*"]
+module = ["ptyprocess.*", "detect_secrets.*", "textual.*", "slack_sdk.*", "fastapi.*", "uvicorn.*", "starlette.*", "websockets.*", "ApplicationServices.*", "Cocoa.*"]
 ignore_missing_imports = true
+
+# Monitors — platform-specific (macOS Accessibility, optional websockets)
+[[tool.mypy.overrides]]
+module = ["atlasbridge.monitors.*"]
+disallow_untyped_defs = false
+disable_error_code = ["no-untyped-call", "attr-defined", "unused-ignore"]
 
 # CLI commands — Click-decorated, intentionally untyped (ruff ANN ignored)
 [[tool.mypy.overrides]]
